--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,7 @@ body {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
